--- a/style.html
+++ b/style.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="blogs/st.css">
     <title>A Simple website</title>
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, saepe, reprehenderit quas veritatis voluptatibus voluptates adipisci culpa praesentium iusto atque quam ut obcaecati accusantium natus consequuntur earum vel distinctio eius numquam? Consequatur ullam, aspernatur magni veniam nulla culpa ipsam blanditiis?</p>
+    </div>
 </body>
 </html>
