--- a/style.html
+++ b/style.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, saepe, reprehenderit quas veritatis voluptatibus voluptates adipisci culpa praesentium iusto atque quam ut obcaecati accusantium natus consequuntur earum vel distinctio eius numquam? Consequatur ullam, aspernatur magni veniam nulla culpa ipsam blanditiis?</p>
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, saepe, reprehenderit quas veritatis voluptatibus voluptates adipisci culpa praesentium iusto atque quam ut obcaecati accusantium natus consequuntur earum vel distinctio eius numquam? Consequatur ullam, aspernatur magni veniam nulla culpa ipsam blanditiis?</p>
+    </div>
+    <div>
+        <h3>My tired website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, saepe, reprehenderit quas veritatis voluptatibus voluptates adipisci culpa praesentium iusto atque quam ut obcaecati accusantium natus consequuntur earum vel distinctio eius numquam? Consequatur ullam, aspernatur magni veniam nulla culpa ipsam blanditiis?</p>
+    </div>
 </body>
 </html>
