--- a/style.html
+++ b/style.html
@@ -19,5 +19,13 @@
         <h3>My tired website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, saepe, reprehenderit quas veritatis voluptatibus voluptates adipisci culpa praesentium iusto atque quam ut obcaecati accusantium natus consequuntur earum vel distinctio eius numquam? Consequatur ullam, aspernatur magni veniam nulla culpa ipsam blanditiis?</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit messages</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
