--- a/style.html
+++ b/style.html
@@ -27,5 +27,7 @@
             <li>git push</li>
         </ul>
     </div>
+    <h1>Beautiful Places</h1>
+    <img src="place.jpg" alt="">
 </body>
 </html>
